# cura-build

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: main.yml
cmake/: NSIS.template.in
packaging/: cpackconfig_common.cmake  cpackconfig_nsis.cmake  cpackconfig_wix.cmake  setup_win32.py.in  steslicer.wxs  windows.cmake
projects/: CliParser.cmake  Cura.cmake  CuraEngine.cmake  SteSlicer.cmake  SteSlicerBinaryData.cmake  SteSlicerPlugins.cmake  Uranium.cmake  cura-binary-data.cmake  libCharon.cmake
scripts/windows/: build.ps1  build_in_docker_vs2015.cmd  testing.ps1
signing/: windows.cmake
